[workspace]
resolver = "2"
members = [
    "cli/cli-test-utils",
    "cli/s-cli-utils",
    "cli/s-controller",
    "cli/generic-pool-calculator",
    "cli/pricing-programs/*",
    "generated/pricing-programs/*",
    "generated/s_controller_interface",
    "generated/sol-value-calculator-programs/*",
    "keys/*",
    "libs/aggregate/*",
    "libs/pricing-programs/*",
    "libs/s-controller-lib",
    "libs/s-controller-test-utils",
    "libs/s-jup-interface",
    "libs/sanctum-s-common",
    "libs/sol-value-calculator-programs/*",
    "programs/pricing-programs/*",
    "programs/s-controller",
    "programs/sol-value-calculator-programs/*",
    "test-utils",
]

#[profile.release]
#overflow-checks = true # increases binary size, we're using checked ops everywhere
#lto = "fat" # doesn't affect binary size
#panic = "abort" # cargo-build-sbf does this
#strip = true # cargo-build-sbf strips symbols after building

[workspace.dependencies]
anyhow = "^1"
assert_cmd = "^2"
async-trait = ">=0.1"
bincode = "^1"
borsh = "1"
bytemuck = "^1"
clap = { version = "^4", features = ["derive"] }
data-encoding = "^2"
inquire = { version = "^0.7", default-features = false, features = ["crossterm"] }
jupiter-amm-interface = { version = "0.4.6" }
lazy_static = "^1"
num-derive = ">=0.3"
num-traits = ">=0.2"
proptest = "^1"
rust_decimal = "1.36" # anything >1.32 uses borsh ^1
sanctum-macros = { git = "https://github.com/jup-ag/sanctum-macros.git", rev = "7f2defa7c72aebea24b4bb4d2076ce8c0765086d" }
serde = "^1.0.197"
serde_json = "^1"
spl-pod = ">=0.1.0"
spl-token = "5.0.2"
spl-token-2022 = "5.0.2"
spl-token-metadata-interface = "0.5.1"
spl-associated-token-account = "5.0.1"
static_assertions = "^1"
thiserror = "^1"
tokio = "^1"

# DO NOT ENABLE `features = ["solana-sdk"]` HERE OR ELSE IT'LL MAKE ALL ONCHAIN PROGRAMS UNCOMPILABLE
# CLIENT CRATES SHOULD ENABLE IT SEPARATELY
solana-readonly-account = { git = "https://github.com/jup-ag/sanctum-solana-utils.git", rev = "6e57519ae3e86e91d1f6d4f7de3bdf7a72b2d783" }

# solana libraries (not pure rust)
# Use ^1 for flexibility for library users, but lock to 1.17.6 for deploy.
# To update versions, set solana-program and solana-program-test to `=<new-vers>`,
# then restore `^1` after Cargo.lock is updated
solana-account-decoder = "~2.0"
solana-client = "~2.0"
solana-program = "~2.0"
solana-program-test = "~2.0"
solana-rpc-client-api = "~2.0"
solana-sdk = "~2.0"
solana-transaction-status = "~2.0"

# sanctum-solana-utils
# TODO: use the same commit for everything once all the *-lib libs are ready, requires refactor
# 2d1718f is the older version, frozen for now due to breaking changes in these 3 libs
sanctum-associated-token-lib = { git = "https://github.com/jup-ag/sanctum-solana-utils.git", rev = "6e57519ae3e86e91d1f6d4f7de3bdf7a72b2d783" }
sanctum-misc-utils = { git = "https://github.com/jup-ag/sanctum-solana-utils.git", rev = "6e57519ae3e86e91d1f6d4f7de3bdf7a72b2d783" }
sanctum-token-lib = { git = "https://github.com/jup-ag/sanctum-solana-utils.git", rev = "6e57519ae3e86e91d1f6d4f7de3bdf7a72b2d783" }
sanctum-solana-cli-utils = { git = "https://github.com/jup-ag/sanctum-solana-utils.git", rev = "6e57519ae3e86e91d1f6d4f7de3bdf7a72b2d783", features = ["clap"] }
sanctum-solana-client-utils = { git = "https://github.com/jup-ag/sanctum-solana-utils.git", rev = "6e57519ae3e86e91d1f6d4f7de3bdf7a72b2d783" }
sanctum-solana-test-utils = { git = "https://github.com/jup-ag/sanctum-solana-utils.git", rev = "6e57519ae3e86e91d1f6d4f7de3bdf7a72b2d783" }
sanctum-system-program-lib = { git = "https://github.com/jup-ag/sanctum-solana-utils.git", rev = "6e57519ae3e86e91d1f6d4f7de3bdf7a72b2d783" }
sanctum-token-ratio = { git = "https://github.com/jup-ag/sanctum-solana-utils.git", rev = "6e57519ae3e86e91d1f6d4f7de3bdf7a72b2d783" } 
system_program_interface =  { git = "https://github.com/jup-ag/sanctum-solana-utils.git", rev = "6e57519ae3e86e91d1f6d4f7de3bdf7a72b2d783" }
spl_token_interface = { git = "https://github.com/jup-ag/sanctum-solana-utils.git", rev = "6e57519ae3e86e91d1f6d4f7de3bdf7a72b2d783" } 

# sanctum-lst-list
sanctum-lst-list = { git = "https://github.com/jup-ag/sanctum-lst-list.git", rev = "9feccf7ac1dca9394006a249e3b979761baac007" }

# stakedex
stakedex_interface = { git = "https://github.com/jup-ag/stakedex-sdk.git", rev = "a9d76cd58f59c0077d0294307d796c1a8f017d12" }
stakedex_marinade = { git = "https://github.com/jup-ag/stakedex-sdk.git", rev = "a9d76cd58f59c0077d0294307d796c1a8f017d12" }
stakedex_sdk_common = { git = "https://github.com/jup-ag/stakedex-sdk.git", rev = "a9d76cd58f59c0077d0294307d796c1a8f017d12" }
stakedex_spl_stake_pool = { git = "https://github.com/jup-ag/stakedex-sdk.git", rev = "a9d76cd58f59c0077d0294307d796c1a8f017d12" }

# workspace members
cli-test-utils = { path = "./cli/cli-test-utils" }
flat_fee_interface = { path = "./generated/pricing-programs/flat_fee_interface" }
pricing_programs_interface = { path = "./generated/pricing-programs/pricing_programs_interface" }
s_controller_interface = { path = "./generated/s_controller_interface" }
generic_pool_calculator_interface = { path = "./generated/sol-value-calculator-programs/generic_pool_calculator_interface" }
lido_calculator_interface = { path = "./generated/sol-value-calculator-programs/lido_calculator_interface" }
marinade_calculator_interface = { path = "./generated/sol-value-calculator-programs/marinade_calculator_interface" }
sol_value_calculator_interface = { path = "./generated/sol-value-calculator-programs/sol_value_calculator_interface" }
spl_calculator_interface = { path = "./generated/sol-value-calculator-programs/spl_calculator_interface" }
wsol_calculator_interface = { path = "./generated/sol-value-calculator-programs/wsol_calculator_interface" }
lido-keys = { path = "./keys/lido-keys" }
marinade-keys = { path = "./keys/marinade-keys" }
sanctum-spl-multi-stake-pool-keys = { path = "./keys/sanctum-spl-multi-stake-pool-keys" }
spl-stake-pool-keys = { path = "./keys/spl-stake-pool-keys" }
wsol-keys = { path = "./keys/wsol-keys" }
flat-fee-lib = { path = "./libs/pricing-programs/flat-fee-lib" }
flat-fee-test-utils = { path = "./libs/pricing-programs/flat-fee-test-utils" }
s-controller-lib = { path = "./libs/s-controller-lib" }
generic-pool-calculator-lib = { path = "./libs/sol-value-calculator-programs/generic-pool-calculator-lib" }
generic-pool-calculator-onchain = { path = "./libs/sol-value-calculator-programs/generic-pool-calculator-onchain" }
generic-pool-calculator-test-utils = { path = "./libs/sol-value-calculator-programs/generic-pool-calculator-test-utils" }
lido-calculator-lib = { path = "./libs/sol-value-calculator-programs/lido-calculator-lib" }
marinade-calculator-lib = { path = "./libs/sol-value-calculator-programs/marinade-calculator-lib" }
s-jup-interface = { path = "./libs/s-jup-interface"}
s-pricing-prog-aggregate = { path = "./libs/aggregate/s-pricing-prog-aggregate"}
s-sol-val-calc-prog-aggregate = { path = "./libs/aggregate/s-sol-val-calc-prog-aggregate" }
sanctum-s-common = { path = "./libs/sanctum-s-common" }
sanctum-spl-stake-pool-keys = { path = "./keys/sanctum-spl-stake-pool-keys" }
sol-value-calculator-lib = { path = "./libs/sol-value-calculator-programs/sol-value-calculator-lib" }
sol-value-calculator-onchain = { path = "./libs/sol-value-calculator-programs/sol-value-calculator-onchain" }
spl-calculator-lib = { path = "./libs/sol-value-calculator-programs/spl-calculator-lib" }
wsol-calculator-lib = { path = "./libs/sol-value-calculator-programs/wsol-calculator-lib" }
flat-fee = { path = "./programs/pricing-programs/flat-fee" }
no-fee-pricing-program = { path = "./programs/pricing-programs/no-fee-pricing-program" }
s-cli-utils = { path = "./cli/s-cli-utils" }
s-controller = { path = "./programs/s-controller" }
s-controller-test-utils = { path = "./libs/s-controller-test-utils" }
lido-calculator = { path = "./programs/sol-value-calculator-programs/lido-calculator" }
marinade-calculator = { path = "./programs/sol-value-calculator-programs/marinade-calculator" }
spl-calculator = { path = "./programs/sol-value-calculator-programs/spl-calculator" }
wsol-calculator = { path = "./programs/sol-value-calculator-programs/wsol-calculator" }
test-utils = { path = "./test-utils" }

[patch.crates-io]
spl-math = { git ="https://github.com/solana-labs/solana-program-library.git", rev =  "d0f238f62ba03a7292924559a8f8d1adb4179cd5" }